lab/istio/ntest/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ntest
  name: ntest
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ntest
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: ntest
    spec:
      containers:
      - image: nginx:1.19
        name: ntest
