lab/istio/ntest/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ntest
  name: ntest
  namespace: dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: ntest
