lab/istio/ntest/ntest-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ntest-virtualservice
  namespace: dev
spec:
  hosts:
  - "nginx.example.com"
  gateways:
  - ingress-gateway-demo
  http:
  - name: api
    match:
    - uri:
        prefix: /api
    rewrite:
      uri: "/"
    route:
    - destination:
        host: ntest
        port:
          number: 80
  - name: root
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: ntest
        port:
          number: 80
